fix work spacing

--- a/src/components/experience/experience.scss
+++ b/src/components/experience/experience.scss
@@ -60,7 +60,7 @@
      gap: 1rem;
      align-items: center;
      justify-content: flex-start;
-     margin-top: auto;
+     margin-top: 2rem;
  }
 
  .experience__details {
