--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -286,9 +286,14 @@ footer {
     justify-content: center;
     padding: 1rem;
 
-    h2, .project__text {
+    h2 {
+    text-align: center;
+    margin: 1.5rem 0;
+    }
+    
+    .project__text {
         text-align: center;
-        margin-bottom: 1.5rem
+        margin-bottom: 1.5rem;
     }
 
         
