--- a/src/styles/_media-queries.scss
+++ b/src/styles/_media-queries.scss
@@ -44,12 +44,6 @@
         .project__wrapper {
             display: flex;
             // grid-template-columns: 1fr 1fr;
-    
-            h2,
-            .project__text {
-                text-align: center;
-                margin-bottom: 1.5rem
-            }
 
             p {
                 padding: 0 1.5rem 1rem 1.5rem;
@@ -308,6 +302,12 @@ ul {
                 align-items: flex-start;
                 grid-template-columns: 1fr 1fr;
                 gap: 2rem;
+
+                h2 {
+                        text-align: left;
+                        margin-top: 0;
+                    }
+
         
                 .project__text {
                     text-align: left;
